// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom-src-paths > build > should create valid app 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/main.js"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: NO DIFF
`;

exports[`custom-src-paths > build > should generate the expected files 1`] = `
{
  "2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "2.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8" />
    <title>hello-world</title>
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    
<link data-chunk="main" rel="preload" as="script" href="/some-static-place/runtime.js">
<link data-chunk="main" rel="preload" as="script" href="/some-static-place/2.js">
<link data-chunk="main" rel="preload" as="script" href="/some-static-place/main.js">
  </head>
  <body>
    <div id="app"><div>Hello custom src paths</div></div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__" type="application/json">[]</script><script id="__LOADABLE_REQUIRED_CHUNKS___ext" type="application/json">{"namedChunks":[]}</script>
<script async data-chunk="main" src="/some-static-place/runtime.js"></script>
<script async data-chunk="main" src="/some-static-place/2.js"></script>
<script async data-chunk="main" src="/some-static-place/main.js"></script>
  </body>
</html>",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths > start > should start a development server 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/main.js"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: NO DIFF
`;
